# bgi-soap2

./: README.md
executables/2.19/: soap  soap.1
executables/2.20/Darwin/: README  soap
executables/2.21/x86_64/: release  soap.1  soap.man
src/: BWT.c  BWT.h  BWTAln.c  BWTAln.h  ChangLogCode.Apr1  ChangeLog1  HSP.c  HSP.h  INSTALL  Makefile  Match.c  Match.h  MemManager.c  MemManager.h  MiscUtilities.c  PairMatch.c  README  SeqIO.c  SeqIO.h  TextConverter.c  Timing.c  Timing.h  TypeNLimit.h  extratools.c  extratools.h  soap.1  soap.c  soap.h  soap.man  soapio.c  soapio.h  stdaln.c  stdaln.h
tools/msort/: AUTHORS  Makefile.am  README  configure.ac  msort.c
tools/soap.coverage/2.7.7/: soap.coverage.1  soap.coverage.man
